# contrail

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  com.contrail.daemon.plist  install.sh  task.md  wrapup_2025.html
.beads/: issues.jsonl
.github/workflows/: ci.yml
analysis/: Cargo.toml
analysis/src/: ade.html  context_pack.rs  ingest.rs  lib.rs  llm.rs  main.rs  memory.rs  memory_blocks.rs  models.rs  salience.rs  search.rs
contrail_types/: Cargo.toml
contrail_types/src/: lib.rs
contrails/: Cargo.toml
core_daemon/: Cargo.toml  build.rs
core_daemon/src/: lib.rs  main.rs
dashboard/: Cargo.toml
dashboard/src/: index.html  lib.rs  main.rs
decoder/: Cargo.toml
decoder/src/: main.rs
export/: wrapup_2025.json
importer/: Cargo.toml
importer/src/: lib.rs  main.rs
scrapers/: Cargo.toml
scrapers/src/: claude.rs  claude_profile_import.rs  codex.rs  config.rs  cursor.rs  harvester.rs  history_import.rs  learnings.rs  lib.rs  log_index.rs  log_writer.rs  merge.rs  notifier.rs  parse.rs  rotation.rs  sentry.rs  types.rs
scrapers/src/watchers/: antigravity.rs  claude.rs  codex.rs  cursor.rs  mod.rs
scripts/: dev.sh  release-bump.sh
tools/contrail/: Cargo.toml
tools/contrail/src/: lib.rs  main.rs
tools/exporter/: Cargo.toml
tools/exporter/src/: lib.rs  main.rs
tools/memex/: Cargo.toml  README.md
tools/memex/src/: aliases.rs  bundle.rs  detect.rs  explain.rs  init.rs  lib.rs  link.rs  main.rs  render.rs  search.rs  share.rs  sync.rs  types.rs
tools/memex/src/readers/: claude.rs  codex.rs  cursor.rs  mod.rs
tools/wrapup/: Cargo.toml
tools/wrapup/src/: lib.rs  main.rs  report.rs
