[package]
name = "analysis"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.7.5"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0.1"
regex = "1.10.4"
scrapers = { path = "../scrapers" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
once_cell = "1.19.0"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
reqwest = { version = "0.12.4", features = ["json", "rustls-tls"] }
shellexpand = "3.1.0"
