[package]
name = "contrail-types"
version = "0.1.3"
edition = "2021"
description = "Shared Contrail log schema and protocol types"
license = "MIT"
repository = "https://github.com/strangeloopcanon/contrail"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
