[package]
name = "core_daemon"
version = "0.1.2"
edition = "2021"

[dependencies]
scrapers = { path = "../scrapers", version = "0.1.3" }
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify-rust = "4.11.0"
dirs = "5.0.1"
