[package]
name = "contrail-dashboard"
version = "0.1.2"
edition = "2024"
description = "Contrail dashboard web UI for local-first session logs"
license = "MIT"
repository = "https://github.com/strangeloopcanon/contrail"

[[bin]]
name = "dashboard"
path = "src/main.rs"

[dependencies]
async-stream = "0.3"
axum = "0.7.5"
chrono = { version = "0.4", features = ["serde"] }
futures-core = "0.3"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5.2", features = ["fs", "trace", "cors"] }
dirs = "5.0.1"
scrapers = { path = "../scrapers", version = "0.1.3" } # Reuse types
