[package]
name = "importer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"
dirs = "5.0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
scrapers = { path = "../scrapers" }
anyhow = "1.0"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
