[package]
name = "importer"
version = "0.1.3"
edition = "2024"
description = "Contrail history import and cross-machine log merge/export library + CLI"
license = "MIT"
repository = "https://github.com/strangeloopcanon/contrail"

[dependencies]
scrapers = { path = "../scrapers", version = "0.1.3" }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
