[package]
name = "scrapers"
version = "0.1.3"
edition = "2021"
description = "Contrail scrapers and normalization library for local AI coding session logs"
license = "MIT"
repository = "https://github.com/strangeloopcanon/contrail"

[dependencies]
contrail-types = { path = "../contrail_types", version = "0.1.2" }
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
walkdir = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1.37.0", features = ["full"] }
regex = "1.10.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
notify-rust = "4.11.0"
dirs = "5.0.1"
whoami = "1.6.1"
arboard = "3.6.1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
tempfile = "3"
