[package]
name = "contrail-cli"
version = "0.1.4"
edition = "2024"
description = "Contrail CLI: service lifecycle plus history import and cross-machine export/merge"
license = "MIT"
repository = "https://github.com/strangeloopcanon/contrail"

[[bin]]
name = "contrail"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
importer = { path = "../../importer", version = "0.1.4" }
