[package]
name = "exporter"
version = "0.1.3"
edition = "2024"
description = "Contrail exporter for filtered JSONL datasets"
license = "MIT"
repository = "https://github.com/strangeloopcanon/contrail"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0.1"
serde_json = "1.0"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
