[package]
name = "memex"
version = "0.1.0"
edition = "2021"
description = "Self-managed context layer for coding agents"

[[bin]]
name = "memex"
path = "src/main.rs"

[dependencies]
scrapers = { path = "../../scrapers" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
dirs = "5"
age = "0.11"
