[package]
name = "wrapup"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0.1"
reqwest = { version = "0.12.4", features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scrapers = { path = "../../scrapers" }
